detail product api
